<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/foreign_word_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dictionary_add_word_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_add_translate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_add_translation" />

        <EditText
            android:id="@+id/translation_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dictionary_add_translation_hint" />
    </LinearLayout>

</LinearLayout>