<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parser_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_common_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="fill_horizontal"
                android:text="@string/parser_description"
                android:textSize="@dimen/text_size_common" />

            <Button
                android:id="@+id/parser_open_file_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/parser_open_file" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_common_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_common_margin"
                android:gravity="center"
                android:text="@string/parser_file_info"
                android:textSize="@dimen/text_size_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/parser_file_name"
                    android:textSize="@dimen/text_size_header" />

                <TextView
                    android:id="@+id/parser_file_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:hint="@string/parser_file_name"
                    android:textSize="@dimen/text_size_common" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/parser_file_size"
                    android:textSize="@dimen/text_size_header" />

                <TextView
                    android:id="@+id/parser_file_size_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:hint="@string/parser_file_size"
                    android:textSize="@dimen/text_size_common" />

            </LinearLayout>

            <Button
                android:id="@+id/parser_parse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/layout_common_margin"
                android:text="@string/parser_parse" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/parser_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>